# shapley-value-simple-game

./: .gitignore  .gitmodules  Cargo.toml  README.md
scripts/: assign_data.py  compile-tpch.sh  config.cfg  soccer-dbgen.sh  tpch-dbgen.sh  transform_data.py  utils.py
src/: alg.rs  dataset.rs  dnf.rs  game.rs  join_plan.rs  lib.rs  owner.rs  product_tree.rs  table.rs  tests.rs  union_combination.rs  utils.rs
src/alg/: iusv.rs  join.rs  permutation.rs  proposed.rs  proposed_ablation.rs  subset_utility.rs  synthesis_sv.rs  traditional.rs
src/alg/iusv/: non_linear_comb.rs  non_linear_lookup.rs
src/alg/synthesis_sv/: iec.rs  recursive_decompose.rs  recursive_decompose_ablation.rs
src/alg/synthesis_sv/iec/: hybrid_coeffs.rs  ie_coeffs.rs
src/dnf/: decompose.rs  dnf.rs  implicant.rs  modular_closure.rs  recursive_decompose.rs  unionfind.rs  utils.rs
