[package]
name = "shapley-value-decomposition"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
opt-level = 3
debug = true

[dependencies]
anyhow = "1.0"
bit-set = "0.5"
clap = { version = "3.2", features = ["derive"] }
csv = "1.1"
dashmap = "5.4"
derive_more = "0.99"
glob = "0.3"
itertools = "0.10"
memmap2 = "0.5"
once_cell = "1.16"
polars = { version = "0.25", features = ["performant"] }
polars-core = "0.25"
ptree = "0.4"
rand = "0.8"
rayon = "1.6"
ref-cast = "1.0"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zipf = "7.0"

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.3"
